syntax = "proto3";

package product;

option go_package = "proto/product";
option java_package = "com.example.product";
option java_multiple_files = true;

// Product service definition
service ProductService {
  // Create a new product
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  
  // Get product by ID
  rpc GetProductById(GetProductByIdRequest) returns (ProductResponse);
  
  // Get product by SKU
  rpc GetProductBySku(GetProductBySkuRequest) returns (ProductResponse);
  
  // Get all products
  rpc GetAllProducts(GetAllProductsRequest) returns (GetAllProductsResponse);
  
  // Get products by category
  rpc GetProductsByCategory(GetProductsByCategoryRequest) returns (GetAllProductsResponse);
  
  // Update product
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  
  // Delete product
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}

// Product message definition
message Product {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string category = 5;
  string brand = 6;
  int32 stock_quantity = 7;
  string sku = 8;
  string image_url = 9;
  bool is_active = 10;
  string created_at = 11;
  string updated_at = 12;
}

// Request/Response messages for CreateProduct
message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  string category = 4;
  string brand = 5;
  int32 stock_quantity = 6;
  string sku = 7;
  string image_url = 8;
  bool is_active = 9;
}

message ProductResponse {
  Product product = 1;
  string message = 2;
  bool success = 3;
}

// Request/Response messages for GetProductById
message GetProductByIdRequest {
  int32 id = 1;
}

// Request/Response messages for GetProductBySku
message GetProductBySkuRequest {
  string sku = 1;
}

// Request/Response messages for GetAllProducts
message GetAllProductsRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetAllProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  string message = 5;
  bool success = 6;
}

// Request/Response messages for GetProductsByCategory
message GetProductsByCategoryRequest {
  string category = 1;
  int32 page = 2;
  int32 limit = 3;
}

// Request/Response messages for UpdateProduct
message UpdateProductRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string category = 5;
  string brand = 6;
  int32 stock_quantity = 7;
  string sku = 8;
  string image_url = 9;
  bool is_active = 10;
}

// Request/Response messages for DeleteProduct
message DeleteProductRequest {
  int32 id = 1;
}

message DeleteProductResponse {
  bool success = 1;
  string message = 2;
} 