syntax = "proto3";

package user;

option go_package = "proto/user";
option java_package = "com.example.user";
option java_multiple_files = true;

// User service definition
service UserService {
  // Create a new user
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  
  // Get user by ID
  rpc GetUserById(GetUserByIdRequest) returns (UserResponse);
  
  // Get user by email
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
  
  // Get all users
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
  
  // Update user
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  
  // Delete user
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

// User message definition
message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string first_name = 5;
  string last_name = 6;
  string phone = 7;
  string address = 8;
  string city = 9;
  string state = 10;
  string zip_code = 11;
  string country = 12;
  string created_at = 13;
  string updated_at = 14;
}

// Request/Response messages for CreateUser
message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string first_name = 4;
  string last_name = 5;
  string phone = 6;
  string address = 7;
  string city = 8;
  string state = 9;
  string zip_code = 10;
  string country = 11;
}

message UserResponse {
  User user = 1;
  string message = 2;
  bool success = 3;
}

// Request/Response messages for GetUserById
message GetUserByIdRequest {
  int32 id = 1;
}

// Request/Response messages for GetUserByEmail
message GetUserByEmailRequest {
  string email = 1;
}

// Request/Response messages for GetAllUsers
message GetAllUsersRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetAllUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  string message = 5;
  bool success = 6;
}

// Request/Response messages for UpdateUser
message UpdateUserRequest {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string first_name = 5;
  string last_name = 6;
  string phone = 7;
  string address = 8;
  string city = 9;
  string state = 10;
  string zip_code = 11;
  string country = 12;
}

// Request/Response messages for DeleteUser
message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
} 